# smarthome-math

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: coverage.yml  rust.yml
src/: angle_distance.rs  hsv.rs  interpolate.rs  lib.rs  light.rs  location.rs  time.rs
