[package]
name = "smarthome-math"
version = "0.1.0"
repository = "https://github.com/EdJoPaTo/smarthome-math"
authors = ["EdJoPaTo <smarthome-math-rust@edjopato.de>"]
edition = "2021"
rust-version = "1.61"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "bracket-color", "chrono", "location"]
bracket-color = ["dep:bracket-color"]
chrono = ["dep:chrono"]
location = ["chrono", "dep:suncalc"]
std = []

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
bracket-color = { version = "0.8.7", optional = true }
chrono = { version = "0.4.32", optional = true, default-features = false, features = ["clock"] }
suncalc = { version = "0.4.0", optional = true }

[dev-dependencies]
float_eq = "1.0.0"
