[package]
name = "smarthome-math"
version = "0.1.0"
repository = "https://github.com/EdJoPaTo/smarthome-math"
authors = ["EdJoPaTo <smarthome-math-rust@edjopato.de>"]
edition = "2024"
rust-version = "1.85"

[features]
default = ["std", "bracket-color", "chrono", "location"]
bracket-color = ["dep:bracket-color"]
chrono = ["dep:chrono"]
location = ["chrono", "dep:suncalc"]
std = []

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[dependencies]
bracket-color = { version = "0.8.7", optional = true }
chrono = { version = "0.4.32", optional = true, default-features = false }
suncalc = { version = "0.4.0", optional = true }

[dev-dependencies]
float_eq = "1.0.0"
